2009-03-16  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: Don't use "make" but "$(MAKE)" to call
	our make, fixes build on *BSDs, spotted by Antoine Jacoutot
	<ajacoutot@lphp.org> (Closes: #20655)

2009-02-24  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/small_wav.mxf: Patch from Sebastian Dröge
	<slomo@circular-chaos.org> to add the MXF video mime-type
	(Closes: #20292)

=== shared-mime-info 0.60 ===

2009-02-21  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.60
	* Makefile.am: Fix running make distcheck

2009-02-21  Bastien Nocera  <hadess@hadess.net>

	* HACKING: Add some more details about the test suite

2009-02-21  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Magnus Bergman to make the
	Photoshop image match its IANA definition (Closes: #20067)
	* tests/list: Fix mime-type for the above

2009-02-21  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Magnus Bergman to make the
	Windows icon match its IANA definition (Closes: #20069)
	* tests/list: Fix mime-type for the above

2009-02-21  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/aportis.pdb:
	* tests/list:
	* tests/pocket-word.psw: Patch from Caolan McNamara to
	to add the Pocket Word and AportisDoc document types
	(Closes: #20185)

2009-02-21  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Götz Waschk and
	Milan Bouchet-Valat to add Office 2007/OpenXML documents
	mime-types (Closes: #13904)
	* tests/list:
	* tests/sample.docx:
	* tests/sample.pptx:
	* tests/sample.xlsx: Add test files for the above

2009-02-17  David Faure  <faure@kde.org>

	* freedesktop.org.xml.in: Rename image/x-fits to image/fits
	(IANA-registered name), and add image/x-fits as alias
	* tests/list: Update testcase accordingly

2009-02-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add *.vapi as a possible pattern